--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   }
   
   a {
-    color: inherit;
+    color: #ba3c01;
     text-decoration: none;
   }
   
@@ -252,7 +252,7 @@
 }
 
 
-      /* gallery Section */
+/* gallery Section */
 #gallery {
     background-color: #111;
     text-align: center;
@@ -324,6 +324,16 @@
   }
 }
 
+
+.upgrade-text h3 {
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+	  color: #ffffff;
+  }
+
   
 /* Footer Styles */
 footer {
@@ -339,24 +349,30 @@ footer {
 /*Upgrade Info*/
 .upgrade-infoleft {
 margin-left: 20px;
+	margin-right: 20px;
 
 }
 
 .upgrade-infoleft h2 {
   font-family: Lobster;
-  font-size: 48px;
-  color: #ba3c01;
+    font-size: 40px;
+	  margin-bottom: 20px;
+	  color: #fff;
+	  background-color: #ba3c01;
+	  padding: 5px 20px 10px;
+	border-radius: 5px;
 }
 
 .upgrade-infoleft p {
-font-size: 24px;
-font-family: Lobster;
+font-size: 20px;
+font-family: 'Montserrat', sans-serif;
 color: #ffffff;
 }
 
 /* upgrade info right */
 .upgrade-inforight {
-  margin-right: 20px;
+  margin-left: 20px;
+	margin-right: 20px;
   text-align: right;
  
   }
@@ -364,14 +380,17 @@ color: #ffffff;
   
   .upgrade-inforight h2 {
     font-family: Lobster;
-    font-size: 48px;
+    font-size: 40px;
 	  margin-bottom: 20px;
-	  color: #ba3c01;
+	  color: #fff;
+	  background-color: #ba3c01;
+	  padding: 5px 20px 10px;
+	  border-radius: 5px;
   }
   
   .upgrade-inforight p {
-  font-size: 24px;
-  font-family: Lobster;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
 	  color: #ffffff;
   }
 
@@ -399,6 +418,63 @@ color: #ffffff;
 }
 
 
+/* Accordion Section */
+#howto {
+    background-color: #111;
+	text-align: center;
+	padding: 0px 20px 40px;
+  }
+
+.howto-container {
+  margin: auto;
+  max-width: 900px;
+  padding-bottom: 20px;
+  padding-top: 30px;
+  }
+
+.howto-container h2 {
+        font-size: 48px;
+        font-weight: bold;
+        margin-bottom: 10px;
+        font-family: Lobster;
+		  color: #ba3c01;
+      }
+
+.howto-container ol {
+       padding-left: 40px;
+      }
+
+.howto-container li {
+       padding-bottom: 10px;
+      }
+
+  .howto-text {
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+	color: #ba3c01;
+  }
+
+
+/* Accordion Section */
+#accordion {
+    background-color: #111;
+	padding: 40px 20px;
+  }
+
+.accordion-container {
+  margin: auto;
+  max-width: 900px;
+  padding-bottom: 20px;
+	  padding-top: 30px;
+  }
+
+.accordion-item {
+    color: #fff !important;
+    background-color: #000 !important;
+    border: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+}
+
 
 /* Text Slide on Scroll */
 
@@ -408,6 +484,28 @@ color: #ffffff;
   display: flex;
   align-items: center;
   box-sizing: border-box;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #fff !important;
+    background-color: #000 !important;
+    box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
+}
+
+.accordion-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: var(--bs-accordion-btn-padding-y) var(--bs-accordion-btn-padding-x);
+    font-size: 2rem !important;
+    color: #fff !important;
+    text-align: left;
+    background-color: #000 !important;
+    border: 0;
+    border-radius: 0;
+    overflow-anchor: none;
+    transition: var(--bs-accordion-transition);
 }
 
 
