--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@
 /* Footer Styles */
 footer {
     background-color: #252525;
-    color: #f2f2f2;
+    color: #ba3c01;
     padding: 20px;
     text-align: center;
   }
