--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@
     margin-bottom: 20px;
     text-align: center;
     font-family: Lobster;
-	  color: #ba3c01;
+	  color: white;
   }
   
   .gallery-btn {
@@ -339,7 +339,7 @@
     margin-bottom: 20px;
     text-align: center;
     font-family: Lobster;
-	  color: #ffffff;
+	  color: #ba3c01;
   }
 
   .upgrade-text h2 {
